--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
-name = "sip-only-stormshadow"
-version = "0.1.0"
+name = "Stormshadow"
+version = "1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
