--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,4 +22,8 @@ dependencies = [
 dev = [
     "pytest>=8.4.1",
     "ruff>=0.12.9",
+    "sphinx>=7.4",
+    "furo>=2024.8.6",
+    "myst-parser>=3.0.1",
+    "sphinx-copybutton>=0.5.2",
 ]
